# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-03-12 mmichaud <m.michael.michaud@orange.fr>
  * Improve RemoveSpike plugin an move RemoveSpike and MakeValid plugins
    to Tools > QA submenu


* release 1.9.1  ****************************************************************

2016-03-12 mmichaud <m.michael.michaud@orange.fr>
  * Deactivate RemoveSpike plugin for 1.9.1 release

2016-03-10 mmichaud <m.michael.michaud@orange.fr>
  * Add a plugin to remove spikes from polygonal geometries

2016-03-08 mmichaud <m.michael.michaud@orange.fr>
  * JML format did not preserve null attribute values
  * Fix new aggregation plugin for point and/or linestring unioning

2016-02-27 mmichaud <m.michael.michaud@orange.fr>
  * Null boolean was not handled correctly in datastore datasources.
  * Refactoring of DataStore framework. Prepare writing capabilities for
    multiple kinds of drivers.

2016-02-19 mmichaud <m.michael.michaud@orange.fr>
  * Better handling of readOnly attributes in PostGIS writer
  * Add Boolean and Long AttributeType in AttributeCalculator (beanshell)

2016-02-17 mmichaud <m.michael.michaud@orange.fr>
  * patch SpatialiteValueConverterFactory to transform ogc-wkb geometry z
    to postgis ewkb, as this is the only way to parse geometry z with JTS
    currently.

2016-02-16 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug 416 in FillPolygonTool (regression due to JTS change)
  * If a datastore table has several geometries, secondary geometries are
    read as AttributeType.OBJECT attributes rather than STRING so that
    datastore driver can easily write them back as a byte array.

2016-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #415 throwing exceptions in AttributeTablePanel

2016-02-01 mmichaud <m.michael.michaud@orange.fr>